# Sea-battle

./: CMakeLists.txt  README.md
demo/: main.cpp
include/: computer_field.h  computer_intelligence.h  game_symbols.h  location_ships.h  main_menu.h  menu.h  params_windows.h  user_field.h
sources/: computer_field.cpp  computer_intelligence.cpp  location_ships.cpp  main_menu.cpp  menu.cpp  user_field.cpp
